# frontend/openapi.json
@@ -51,6 +51,72 @@
           }
         }
       }
+    },
+    "/api/transactions/{transaction_id}": {
+      "put": {
+        "summary": "Update Transaction Endpoint",
+        "operationId": "update_transaction",
+        "parameters": [
+          {
+            "name": "transaction_id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "title": "Transaction Id" }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/TransactionCreate" }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/Transaction" }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/HTTPValidationError" }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete Transaction Endpoint",
+        "operationId": "delete_transaction",
+        "parameters": [
+          {
+            "name": "transaction_id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "title": "Transaction Id" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": { "application/json": { "schema": {} } }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/HTTPValidationError" }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -150,7 +216,7 @@
         "title": "TransactionCreate"
       },
       "TransactionResponse": {
-        "properties": { "id": { "type": "string", "title": "Id" } },
+        "properties": { "id": { "type": "integer", "title": "Id" } },
         "type": "object",
         "required": ["id"],
         "title": "TransactionResponse"
